Fix config load issues and test run aginst Snowflake against pre-loaded 100 GB TPCDS dataset. Update Read me file